--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==3.4
 motor==3.1.1
 pydantic==1.10.4
 pymongo==4.3.3
+python-dotenv==1.0.0
 sniffio==1.3.0
 starlette==0.22.0
 typing_extensions==4.4.0
