--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"@popperjs/core": "^2.11.7",
+		"@svelte-web-fonts/google": "^1.0.4",
 		"classnames": "^2.3.2",
 		"flowbite": "^1.6.5",
 		"flowbite-svelte": "^0.35.1"
