--- a/task-manager/task-manager/package.json
+++ b/task-manager/task-manager/package.json
@@ -26,18 +26,7 @@
 		"svelte-check": "^3.0.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vitest": "^0.25.3",
-		"postcss": "^8.4.23",
-		"postcss-load-config": "^4.0.1",
-		"svelte-preprocess": "^5.0.3",
-		"autoprefixer": "^10.4.14",
-		"tailwindcss": "^3.3.1"
+		"vitest": "^0.25.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"@popperjs/core": "^2.11.7",
-		"classnames": "^2.3.2",
-		"flowbite": "^1.6.5",
-		"flowbite-svelte": "^0.35.3"
-	}
+	"type": "module"
 }
